# openharmony-code

applications/sample/component_demo/: BUILD.gn  demo.c
applications/sample/wifi-iot/app/: BUILD.gn  startup.rar
applications/sample/wifi-iot/app/adc_demo/: BUILD.gn  gas_alarm.c  gas_sensor.c  human_sensor.c  light_sensor.c  night_light.c  rgb_light.c  voltage_buttons_int.c  voltage_buttons_int_queue.c  voltage_buttons_thread.c  voltage_buttons_timer.c
applications/sample/wifi-iot/app/astronauts_game/common/hals/: BUILD.gn
applications/sample/wifi-iot/app/astronauts_game/game/: BUILD.gn
applications/sample/wifi-iot/app/delay_demo/: BUILD.gn  delay.c
applications/sample/wifi-iot/app/easy_wifi/: BUILD.gn
applications/sample/wifi-iot/app/easy_wifi/demo/: BUILD.gn  wifi_connect_demo.c  wifi_hotspot_demo.c
applications/sample/wifi-iot/app/easy_wifi/src/: BUILD.gn  wifi_connecter.c  wifi_connecter.h  wifi_starter.c  wifi_starter.h
applications/sample/wifi-iot/app/file_demo/: BUILD.gn  file.c
applications/sample/wifi-iot/app/gn_practice/: BUILD.gn
applications/sample/wifi-iot/app/gn_practice/application/: BUILD.gn  app_main.c  component_1.c  component_2.c
applications/sample/wifi-iot/app/gn_practice/driver/: BUILD.gn  drv_1.c
applications/sample/wifi-iot/app/gpio_input_demo/: BUILD.gn  gpio_input_get.c  gpio_input_int.c  gpio_input_int_lpc.c
applications/sample/wifi-iot/app/i2c_demo/: BUILD.gn  aht20.c  temp-humi_sensor.c
applications/sample/wifi-iot/app/kvstore_demo/: BUILD.gn  kvstore.c
applications/sample/wifi-iot/app/led_demo/: BUILD.gn  led.c
applications/sample/wifi-iot/app/message_demo/: BUILD.gn  message.c
applications/sample/wifi-iot/app/mqtt_demo/: BUILD.gn  demo_entry.c
applications/sample/wifi-iot/app/mqtt_gas_sensor/: BUILD.gn  demo_entry.c  gas_sensor.c  gas_sensor.h  mqtt_task.c  mqtt_task.h
applications/sample/wifi-iot/app/mqtt_human_sensor/: BUILD.gn  demo_entry.c  human_sensor.c  human_sensor.h
applications/sample/wifi-iot/app/mqtt_light/: BUILD.gn  demo_entry.c  mqtt_task.c  traffic_light.c  traffic_light.h
applications/sample/wifi-iot/app/mqtt_light_sensor/: BUILD.gn  demo_entry.c  light_sensor.c  light_sensor.h
applications/sample/wifi-iot/app/mqtt_oled/: BUILD.gn  demo_entry.c  mqtt_task.c
applications/sample/wifi-iot/app/mqtt_temp-humi_sensor/: BUILD.gn  demo_entry.c  temp-humi_sensor.c  temp-humi_sensor.h
applications/sample/wifi-iot/app/mutex_demo/: BUILD.gn  mutex.c
applications/sample/wifi-iot/app/nfc_demo/: BUILD.gn  app_demo_multi_sample.c  app_demo_multi_sample.h  app_demo_nfc.c
applications/sample/wifi-iot/app/oled_demo/: BUILD.gn  oled_demo.c  oled_demo_chinese.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h
applications/sample/wifi-iot/app/paho_mqtt/MQTTClient-C/: BUILD.gn
applications/sample/wifi-iot/app/paho_mqtt/MQTTClient-C/samples/FreeRTOS/: MQTTEcho.c
applications/sample/wifi-iot/app/paho_mqtt/MQTTClient-C/samples/ohos/: BUILD.gn  wifiiot_at.c
applications/sample/wifi-iot/app/pwm_demo/: BUILD.gn  pwm_buz.c  pwm_led.c  pwm_music.c  pwm_volume.c  traffic_light.c
applications/sample/wifi-iot/app/qrcode_gen/demo/: BUILD.gn  demo.c
applications/sample/wifi-iot/app/qrcode_gen/src/: BUILD.gn  qrcodegen.c
applications/sample/wifi-iot/app/semaphore_demo/: BUILD.gn  semp.c  semp_basic.c
applications/sample/wifi-iot/app/ssd1306_3rd_driver/: BUILD.gn
applications/sample/wifi-iot/app/ssd1306_3rd_driver/examples/: BUILD.gn  ssd1306_demo.c  ssd1306_tests.c  ssd1306_tests.h
applications/sample/wifi-iot/app/startup/: BUILD.gn  hello.c
applications/sample/wifi-iot/app/tcpclient/: BUILD.gn  demo_entry_cmsis.c  tcp_client_test.c
applications/sample/wifi-iot/app/tcpserver/: BUILD.gn  demo_entry_cmsis.c  tcp_server_test.c
applications/sample/wifi-iot/app/thread_demo/: BUILD.gn  thread.c  thread_basic.c
applications/sample/wifi-iot/app/timer_demo/: BUILD.gn  timer.c  timer_once.c
applications/sample/wifi-iot/app/udpclient/: BUILD.gn  demo_entry_cmsis.c  udp_client_test.c
applications/sample/wifi-iot/app/udpserver/: BUILD.gn  demo_entry_cmsis.c  udp_server_test.c
applications/sample/wifi-iot/app/wifi_demo/: BUILD.gn  wifi_connect_demo.c  wifi_hotspot_demo.c  wifi_scan_demo.c
