# 静态库
static_library("led_demo") {
    sources = [
        "led.c"
    ]

    include_dirs = [
        # include "ohos_init.h",...
        "//utils/native/lite/include",

        # include CMSIS-RTOS API V2 for OpenHarmony1.0+：
        "//kernel/liteos_m/kal/cmsis",

        # include IoT硬件设备操作接口 for OpenHarmony1.0：
        # "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        # include IoT硬件设备操作接口 for OpenHarmony1.0+：
        "//base/iot_hardware/peripheral/interfaces/kits",
    ]
}
